--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <meta charset="UTF-8">
-        <title>Digital Agency</title>
         <link rel="stylesheet" href="style.css">
+        <title>Digital Agency</title>
     </head>
     <body>
         <nav>
@@ -30,5 +30,34 @@
             </div>
             <img class="hero-image" src="assets/hero.png" alt="hero">
         </section>
+        <section class="service">
+            <h2>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</h>
+            <div class="description">
+                <div class="description__item">
+                    <h1>Lorem Ipsum</h1>
+                    <p>
+                        Lorem Ipsum is simply dummy text of the printing and typesetting 
+                        industry. Lorem Ipsum has been the industry's standard dummy text 
+                        ever since the 1500s</p>    
+                    </div>
+                <div class="image">
+                    <img src="assets/service.png" alt="service" width="1300px">
+                    <img class="svg" src="assets/service.svg" alt="svg">
+                </div>
+            </div>
+            <div class="service__content pre">
+                <div class="service__description">
+                    <h1>Lorem Ipsum is simply dummy text of the printing and 
+                        typesetting industry.</h1>
+                    <p>
+                        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the 
+                        industry's standard dummy text ever since the 1500s</p>    
+                    </div>
+                </div>
+                <div class="service__items">
+                </div>
+            </div>
+        </section>
+        <script src="script.js"></script>
     </body>
 </html>
