--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <img class="hero-image" src="assets/hero.png" alt="hero">
         </section>
         <section class="service">
-            <h2>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</h>
+            <h2>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</h2>
             <div class="description">
                 <div class="description__item">
                     <h1>Lorem Ipsum</h1>
@@ -52,10 +52,18 @@
                     <p>
                         Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the 
                         industry's standard dummy text ever since the 1500s</p>    
-                    </div>
                 </div>
                 <div class="service__items">
                 </div>
+            </div>
+        </section>
+        <section class="products">
+            <div class="product">
+                <div class="product__description">
+                    <h1>Lorem Ipsum</h1>
+                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. </p>
+                </div>
+                <div class="product__cards"></div>
             </div>
         </section>
         <script src="script.js"></script>
