--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <h3>Digital Marketing</h3>
                 <h1>Work that we produce for our clients</h1>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque rerum, explicabo delectus nesciunt recusandae eligendi vero atque beatae minus fugiat architecto cumque commodi expedita nemo! Maiores sequi corporis voluptatum ex.</p>
-                <a href="#">Get More Details</a>
+                <a href="#" class="hero-button">Get More Details</a>
             </div>
             <img class="hero-image" src="assets/hero.png" alt="hero">
         </section>
@@ -60,10 +60,17 @@
         <section class="products">
             <div class="product">
                 <div class="product__description">
-                    <h1>Lorem Ipsum</h1>
-                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. </p>
+                    <div class="product__text">
+                        <h1>Lorem Ipsum</h1>
+                        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. </p>
+                    </div>
+                    <div class="arrow__button">
+                        <img src="assets/arrow_left.svg" alt="arrow_left">
+                        <img src="assets/arrow_right.svg" alt="arrow_right">
+                    </div>
                 </div>
-                <div class="product__cards"></div>
+                <div class="product__cards">
+                </div>
             </div>
         </section>
         <script src="script.js"></script>
