--- a/index.html
+++ b/index.html
@@ -70,7 +70,17 @@
                     </div>
                 </div>
                 <div class="product__cards">
+                    <!-- Check Javascript  -->
                 </div>
+            </div>
+        </section>
+        <section class="project">
+            <div class="project__header">
+                <h1>Our Recent Project</h1>
+                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. </p>
+            </div>
+            <div class="project__items">
+                <!-- Check Javascript -->
             </div>
         </section>
         <script src="script.js"></script>
