--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <meta charset="UTF-8">
         <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="responsive.css">
         <title>Digital Agency</title>
     </head>
     <body>
@@ -58,7 +59,6 @@
                     </div>
                 </div>
                 <div class="product__cards">
-                    <!-- Check Javascript  -->
                 </div>
             </div>
         </section>
@@ -68,7 +68,6 @@
                 <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. </p>
             </div>
             <div class="project__items">
-                <!-- Check Javascript -->
             </div>
             <div class="project__description">
                 <img class="project__description__image" src="assets/project__description__image.png" alt="project__description__image">
