--- a/footer.html
+++ b/footer.html
@@ -39,8 +39,7 @@
         <div class="contact__us">
             <h2>Contact Us</h2>
             <ul>
-                <li class="pre ">
-                    Lorem Ipsum is simply dummy text
+                <li class="pre ">Lorem Ipsum is simply dummy text
                     of the printing and typesetting
                     industry. 
                 </li>
