--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta charset="UTF-8">
         <link rel="stylesheet" href="style.css">
         <link rel="stylesheet" href="responsive.css">
-        <title>Digital Agency</title>
+        <title>Home</title>
     </head>
     <body>
         <nav>
@@ -87,12 +87,24 @@
         </footer>
         <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
         <script>
-$(function() {
-    $("nav").load("navbar.html");
-    $("footer").load("footer.html", function() {
-        initializeSocmed();
-    });
-});
+            $(document).ready(function() {
+            $("nav").load("navbar.html", function() {
+                var title = document.title;
+
+                $("nav .menu ul li a").each(function() {
+                if ($(this).text().trim() === title) {
+                    $(this).parent().css('list-style-type', 'disc');
+                } else {
+                    $(this).parent().css('list-style-type', 'none');
+                }
+                });
+            });
+
+            // Load the footer
+            $("footer").load("footer.html", function() {
+                initializeSocmed();
+            });
+            });
         </script>
                 <script src="script.js"></script>
     </body>
