--- a/footer.html
+++ b/footer.html
@@ -1,5 +1,148 @@
+<style>  
+.footer{
+    display: flex;
+    flex-direction: column;
+    gap: 30px;
+}
 
+.footer ul{
+    list-style: none;
+}
 
+.subscription{
+    display: flex;
+    flex-direction: column;
+    gap: 30px;
+    padding: 0 200px;
+}
+
+.subscription__box{
+    display: flex;
+    position: relative;
+    background-color: var(--footer);
+    color: var(--white);
+    height: 200px;
+    align-items: center;
+    justify-content: space-around;
+    border-radius: 15px;
+}
+
+.box__input {
+    position: relative;
+    font-family: Arial, sans-serif;
+}
+  
+.box__input input[type="email"] {
+    padding: 15px 25px 15px 15px;
+    font-size: 12px;
+    border: 2px solid #ccc;
+    border-radius: 5px;
+    outline: none;
+    width: 250px;
+    padding-right: 80px;
+}
+  
+.box__input button {
+    position: absolute;
+    top: 6.5px;
+    right: 6px;
+    padding: 10px 20px;
+    border: none;
+    background-color: #ffa500;
+    color: white;
+    border-radius: 5px;
+    cursor: pointer;
+    outline: none;
+}
+  
+.box__input input[type="email"]:focus {
+    border-color: #ffa500;
+}
+
+.box__input input[type="email"]::placeholder {
+  font-size: 12px;
+  text-align: left;
+}
+  
+.box__input button:hover {
+    background-color: #ff8700;
+}
+
+.footer__content {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    background-color: var(--footer);
+    color: var(--white);
+    padding: 50px 100px;
+}
+
+.footer__content > * {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
+
+.footer__content > * ul {
+    display: flex;
+    flex-direction: column;
+    gap: 8px;
+}
+
+.social__media{
+    margin-top: 100px;
+    display: flex;
+    flex-direction: row;
+    align-self: end;
+}
+
+@media (max-width:1024px){
+    .subscription{
+        padding: 10px;
+    }
+
+    .footer__content{
+        padding: 50px;
+    }
+}
+@media (max-width:768px){
+    .subscription__box{
+        font-size: 12px;
+        padding: 0 50px;
+    }
+
+    .footer__content{
+        padding: 50px;
+    }
+
+    .footer__content .context, .contact__us{
+        width: 200px;
+    }
+
+    .about__us{
+        width: 150px;
+    }
+
+    .social__media{
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        margin-top: 0;
+    }
+}
+@media (max-width:430px){
+    .subscription__box{
+        flex-direction: column;
+    }
+
+    .footer__content{
+        padding: 15px;
+        justify-content: center;
+    }
+    .about__us, .contact__us{
+        display: none;
+    }
+}
+</style>
 <div class="footer">
     <div class="subscription">
         <div class="subscription__text">
@@ -52,3 +195,41 @@
         </div>
     </div>
 </div>
+<script>
+    const socmed = [
+        { image: "assets/socmed1.svg", class: "socmed1", href: "#" },
+        { image: "assets/socmed2.svg", class: "socmed2", href: "#" },
+        { image: "assets/socmed3.svg", class: "socmed3", href: "#" },
+        { image: "assets/socmed4.svg", class: "socmed4", href: "#" }
+    ];
+
+    function createSocmedItem(socmed) {
+        const itemDiv = document.createElement('div');
+        itemDiv.className = 'socmed__item';
+
+        const anchor = document.createElement('a');
+        anchor.href = socmed.href;
+        itemDiv.appendChild(anchor);
+
+        const img = document.createElement('img');
+        img.src = socmed.image;
+        img.alt = socmed.image;
+        img.className = socmed.class;
+        anchor.appendChild(img);
+
+        return itemDiv;
+    }
+
+    function initializeSocmed() {
+        const socmedContainer = document.querySelector('.social__media');
+        if (socmedContainer) {
+            socmed.forEach(socmed => {
+                socmedContainer.appendChild(createSocmedItem(socmed));
+            });
+        } else {
+            console.error('Social media container not found');
+        }
+    }
+
+    initializeSocmed();
+</script>
