--- a/navbar.html
+++ b/navbar.html
@@ -151,7 +151,7 @@
     </div>
     <div class="menu">
         <ul> 
-            <li><a id="Home" href="/">Home</a></li>
+            <li><a id="Home" href="index.html">Home</a></li>
             <li><a id="About Us" href="about.html">About Us</a></li>
             <li><a id="Services" href="services.html">Services</a></li>
             <li><a id="News" href="news.html">News</a></li>
