--- a/navbar.html
+++ b/navbar.html
@@ -26,7 +26,7 @@
         background-color: var(--secondary);
         color: var(--white);
         height: 80px;
-        width: 100vw;
+        width: 100%;
         z-index: 10;
     }
 
@@ -93,6 +93,10 @@
     }
 
     @media screen and (max-width: 768px) {
+
+        nav{
+            padding: 0 30px;
+        }
         .hamburger{
             display: block;
         }
