--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <body>
         <nav>
         </nav>
-        <section class="hero">
+        <section class="hero padding-sm">
             <div class="hero-content">
                 <h3>Digital Marketing</h3>
                 <h1>Work that we produce for our clients</h1>
@@ -20,7 +20,7 @@
             <img class="hero-image" src="assets/hero.png" alt="hero">
         </section>
         <section class="service">
-            <h2>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</h2>
+            <h1 class="padding-nm">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</h1>
             <div class="description">
                 <div class="description__item">
                     <h1>Lorem Ipsum</h1>
@@ -36,19 +36,19 @@
             </div>
             <div class="service__content pre">
                 <div class="service__description">
-                    <h1>Lorem Ipsum is simply dummy text of the printing and 
+                    <h1 class="padding-nm">Lorem Ipsum is simply dummy text of the printing and 
                         typesetting industry.</h1>
                     <p>
                         Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the 
                         industry's standard dummy text ever since the 1500s</p>    
                 </div>
-                <div class="service__items">
+                <div class="service__items padding-nm">
                 </div>
             </div>
         </section>
         <section class="products">
             <div class="product">
-                <div class="product__description">
+                <div class="product__description padding-nm">
                     <div class="product__text">
                         <h1>Lorem Ipsum</h1>
                         <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. </p>
@@ -69,7 +69,7 @@
             </div>
             <div class="project__items">
             </div>
-            <div class="project__description">
+            <div class="project__description padding-nm">
                 <img class="project__description__image" src="assets/project__description__image.png" alt="project__description__image">
                 <div class="project__description__text pre">
                     <h1>Lorem Ipsum is simply dummy 
