--- a/index.html
+++ b/index.html
@@ -4,13 +4,14 @@
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <meta charset="UTF-8">
         <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="index.css">
         <link rel="stylesheet" href="responsive.css">
         <title>Home</title>
     </head>
     <body>
         <nav>
         </nav>
-        <section class="hero padding-sm">
+        <section class="hero">
             <div class="hero-content">
                 <h3>Digital Marketing</h3>
                 <h1>Work that we produce for our clients</h1>
@@ -20,7 +21,7 @@
             <img class="hero-image" src="assets/hero.png" alt="hero">
         </section>
         <section class="service">
-            <h1 class="padding-nm">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</h1>
+            <h1 class="">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</h1>
             <div class="description">
                 <div class="description__item">
                     <h1>Lorem Ipsum</h1>
@@ -36,19 +37,19 @@
             </div>
             <div class="service__content pre">
                 <div class="service__description">
-                    <h1 class="padding-nm">Lorem Ipsum is simply dummy text of the printing and 
+                    <h1 class="">Lorem Ipsum is simply dummy text of the printing and 
                         typesetting industry.</h1>
                     <p>
                         Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the 
                         industry's standard dummy text ever since the 1500s</p>    
                 </div>
-                <div class="service__items padding-nm">
+                <div class="service__items">
                 </div>
             </div>
         </section>
         <section class="products">
             <div class="product">
-                <div class="product__description padding-nm">
+                <div class="product__description">
                     <div class="product__text">
                         <h1>Lorem Ipsum</h1>
                         <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. </p>
@@ -69,7 +70,7 @@
             </div>
             <div class="project__items">
             </div>
-            <div class="project__description padding-nm">
+            <div class="project__description">
                 <img class="project__description__image" src="assets/project__description__image.png" alt="project__description__image">
                 <div class="project__description__text pre">
                     <h1>Lorem Ipsum is simply dummy 
