--- a/index.html
+++ b/index.html
@@ -93,6 +93,6 @@
             $("footer").load("footer.html");
         });
         </script>
-        <script src="script.js"></script>
+        <script src="index.js"></script>
     </body>
 </html>
