--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
                         industry. Lorem Ipsum has been the industry's standard dummy text 
                         ever since the 1500s</p>    
                     </div>
-                <div class="image">
-                    <img src="assets/service.png" alt="service" width="1300px">
+                <div class="images">
+                    <img class="image" src="assets/service.png" alt="service" width="1300px">
                     <img class="svg" src="assets/service.svg" alt="svg">
                 </div>
             </div>
