--- a/about.html
+++ b/about.html
@@ -4,12 +4,50 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="about.css">
     <link rel="stylesheet" href="responsive.css">
     <title>About Us</title>
 </head>
 <body>
     <nav></nav>
+    <section class="hero">
+        <div class="left">
+            <div class="hero-page-location">
+                <p>Home ></p>
+                <p>About us</p>
+            </div>
+            <div class="hero-title pre">
+                <h1>Lorem Ipsum is simply 
+                    dummy text of the printing 
+                    and.            
+                </h1>
+            </div>
+            <div class="hero-context pre">
+                <p>Lorem Ipsum is simply dummy text of the printing and 
+                    typesetting industry. Lorem Ipsum has been the 
+                    industry's standard dummy text ever since the 1500s.
+                </p>
+            </div>
+            <button class="btn-primary">
+                Get in Touch
+            </button>
+        </div>
+        <div class="right">
+            <div class="hero-carousel">
+                <div class="hero-carousel-item">
+                    <img src="assets/hero.png" alt="hero">
+                </div>
+                <div class="hero-carousel-item">
+                    <img src="assets/hero.png" alt="hero">
+                </div>
+                <div class="hero-carousel-btn">
+                    <img src="assets/arrow_left.svg" alt="arrow_left">
+                    <p>1 of 2</p>
+                    <img src="assets/arrow_right.svg" alt="arrow_right">
+                </div>
+            </div>
+        </div>
+    </section>
     <footer></footer>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script>
