--- a/about.html
+++ b/about.html
@@ -64,7 +64,50 @@
                 <p>A web developer is responsible for designing, coding and modifying websites, from layout to function, according to a client's specifications. They strive to create visually appealing sites that feature user-friendly design and clear navigation.</p> 
             </div>
         </div>
+        <div class="our-team">
+            <h1>Our Team</h1>
+            <div class="team-members">
+                <div class="member-card">
+                    <img src="#" alt="#">
+                    <div class="team-detail">
+                        <h1>Edoardo</h1>
+                        <p>CEO</p>
+                    </div>
+                </div>
+                <div class="member-card">
+                    <img src="#" alt="#">
+                    <div class="team-detail">
+                        <h1>Edoardo</h1>
+                        <p>CEO</p>
+                    </div>
+                </div>
+                <div class="member-card">
+                    <img src="#" alt="#">
+                    <div class="team-detail">
+                        <h1>Edoardo</h1>
+                        <p>CEO</p>
+                    </div>
+                </div>
+                <div class="member-card">
+                    <img src="#" alt="#">
+                    <div class="team-detail">
+                        <h1>Edoardo</h1>
+                        <p>CEO</p>
+                    </div>
+                </div>
+            </div>
+        </div>
     </section>
+    <div class="testimonials">
+        <h1>Our Partnership and Collabratiors</h1>
+        <div class="brand-images">
+            <img src="#" alt="#">
+            <img src="#" alt="#">
+            <img src="#" alt="#">
+            <img src="#" alt="#">
+            <img src="#" alt="#">
+        </div>
+    </div>
     <footer></footer>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="navFooter.js"></script>
