--- a/index.html
+++ b/index.html
@@ -87,12 +87,7 @@
         <footer>
         </footer>
         <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-        <script>
-          $(document).ready(function() {
-            $("nav").load("navbar.html");
-            $("footer").load("footer.html");
-        });
-        </script>
+        <script src="navFooter.js"></script>
         <script src="index.js"></script>
     </body>
 </html>
