--- a/news.html
+++ b/news.html
@@ -12,11 +12,6 @@
     <nav></nav>
     <footer></footer>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script>
-        $(document).ready(function() {
-            $("nav").load("navbar.html");
-            $("footer").load("footer.html");
-        });
-    </script>
+    <script src="navFooter.js"></script>
 </body>
 </html>
