--- a/about.html
+++ b/about.html
@@ -12,8 +12,8 @@
     <nav></nav>
     <section class="hero">
         <div class="left">
-            <div class="hero-page-location">
-                <p>Home ></p>
+            <div class="hero-location">
+                <p>Home > </p>
                 <p>About us</p>
             </div>
             <div class="hero-title pre">
