--- a/services.html
+++ b/services.html
@@ -10,9 +10,10 @@
 </head>
 <body>
     <nav></nav>
-    <section class="hero">
+    <div class="hero">
         <div class="hero-location">
-            <p>Home > </p><p>Services</p>
+            <p>Home ></p>
+            <p> Services</p>
         </div>
         <div class="hero-title">
             <h1>Welcome to Service Page</h1>
@@ -34,9 +35,90 @@
                 <p class="caption">Project</p>
             </div>
         </div>
+    </div>
+    <section class="services-area">
+        <div class="service-description">
+            <div class="video-container">
+                <video src="#"></video>
+            </div>
+            <div class="detail">
+                <h1>What we provide ?</h1>
+                <p>We provide web development service, which included but not limited to :</p>
+                <ul id="checkers">
+                    <li>HTML / CSS scripting</li>
+                    <li>Backend Development (NodeJS or Django)</li>
+                    <li>React Development</li>
+                    <li>.NET Development</li>
+                    <li>Framworking an Libraries like Sass, Bootstrap, Tailwind, TypeScript and many.</li>
+                </ul>
+            </div>
+        </div>
+        <div class="services-container" id="services-container"></div>
     </section>
+    <div class="testimonials">
+        <h1>Trusted by Thousands of Happy Customer</h1>
+        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.Lorem Ipsum is simply dummy .</p>
+            <div class="sliders">
+            <div class="slider">
+                <div class="slider-top">
+                <img src="#.jpg" alt="user-icon">
+                <div class="name">
+                    <h4>Viezh Robert</h4>
+                    <p>Warsaw, Poland</p>
+                </div>
+                <div class="rating">
+                    <img src="review-star.svg" alt="rating">
+                    <p>4.5</p>
+                </div>
+                </div>
+                <p class="comment">
+                    Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,
+                </p>
+            </div>
+            <div class="slider">
+                <div class="slider-top">
+                <img src="#.jpg" alt="user-icon">
+                <div class="name">
+                    <h4>Yessica Christy</h4>
+                    <p>Shanxi, China</p>
+                </div>
+                <div class="rating">
+                    <img src="review-star.svg" alt="rating">
+                    <p>4.5</p>
+                </div>
+                </div>
+                <p class="comment">
+                    Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,
+                </p>
+            </div>
+            <div class="slider">
+                <div class="slider-top">
+                <img src="#.jpg" alt="user-icon">
+                <div class="name">
+                    <h4>Kim Young Jou</h4>
+                    <p>Seoul, Korea</p>
+                </div>
+                <div class="rating">
+                    <img src="review-star.svg" alt="rating">
+                    <p>4.5</p>
+                </div>
+                </div>
+                <p class="comment">
+                    Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,
+                </p>
+            </div>
+        </div>
+        <div class="indicator">
+            <p id="tab">tab</p>
+            <div class="button">
+                <img id="leftButton" src="leftButton.jpg" alt="leftButton">
+                <img id="rightButton" src="rightButton.jpg" alt="rightButton">
+            </div>
+        </div>
+    </div>
     <footer></footer>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="navFooter.js"></script>
+    <script src="services.js"></script>
 </body>
 </html>
