--- a/navbar.html
+++ b/navbar.html
@@ -8,7 +8,7 @@
         <li><a id="About Us" href="about.html">About Us</a></li>
         <li><a id="Services" href="services.html">Services</a></li>
         <li><a id="News" href="news.html">News</a></li>
-        <button class="contact-button">Contact Us</button>
+        <a class="contact-button" href="contact.html">Contact Us</a>
     </ul>
 </div>
 <div class="hamburger">
