--- a/news.html
+++ b/news.html
@@ -4,14 +4,129 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="news.css">
     <link rel="stylesheet" href="responsive.css">
     <title>News</title>
 </head>
 <body>
     <nav></nav>
+    <div class="hero">
+        <div class="hero-location">
+            <p>Home ></p>
+            <p> News</p>
+        </div>
+        <div class="hero-title">
+            <h1>Welcome to Service Page</h1>
+        </div>
+        <div class="search-bar">
+            <img src="assets/search-icon.svg" alt="Search-icon">
+            <input id="inputSearch" type="text" placeholder="Search">
+            <button type="submit">Search</button>
+        </div>
+    </div>
+    <section class="news-content">
+        <div class="left">
+            <div class="first-news">
+                <img src="#" alt="content">
+                <div class="author">
+                    <p class="author-name">John smash</p>
+                    <p>.5 min</p>
+                </div>
+                <div class="content">
+                    <h3>Title</h3>
+                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the</p>
+                </div>
+            </div>
+            <hr>
+            <div class="second-news">
+                <img src="#" alt="content">
+                <div class="author">
+                    <p class="autho-name">John smash</p>
+                    <p>.5 min</p>
+                </div>
+                <div class="content">
+                    <h3>Title</h3>
+                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the</p>
+                </div>
+            </div>
+        </div>
+        <div class="right">
+            <div class="news-thumbnail">
+                <img id="thumbnail" src="#" alt="thumbnail">
+                <div class="thumbnail-content">
+                    <div class="author">
+                        <p class="author-name">John smash</p>
+                        <p>.5 min</p>
+                    </div>
+                    <h3>Title</h3>
+                </div>
+            </div>
+            <div class="news-thumbnail">
+                <img id="thumbnail" src="#" alt="thumbnail">
+                <div class="thumbnail-content">
+                    <div class="author">
+                        <p class="author-name">John smash</p>
+                        <p>.5 min</p>
+                    </div>
+                    <h3>Title</h3>
+                </div>
+            </div>
+            <div class="news-thumbnail">
+                <img id="thumbnail" src="#" alt="thumbnail">
+                <div class="thumbnail-content">
+                    <div class="author">
+                        <p class="author-name">John smash</p>
+                        <p>.5 min</p>
+                    </div>
+                    <h3>Title</h3>
+                </div>
+            </div>
+            <div class="news-thumbnail">
+                <img id="thumbnail" src="#" alt="thumbnail">
+                <div class="thumbnail-content">
+                    <div class="author">
+                        <p class="author-name">John smash</p>
+                        <p>.5 min</p>
+                    </div>
+                    <h3>Title</h3>
+                </div>
+            </div>
+            <div class="news-thumbnail">
+                <img id="thumbnail" src="#" alt="thumbnail">
+                <div class="thumbnail-content">
+                    <div class="author">
+                        <p class="author-name">John smash</p>
+                        <p>.5 min</p>
+                    </div>
+                    <h3>Title</h3>
+                </div>
+            </div>
+            <div class="news-thumbnail">
+                <img id="thumbnail" src="#" alt="thumbnail">
+                <div class="thumbnail-content">
+                    <div class="author">
+                        <p class="author-name">John smash</p>
+                        <p>.5 min</p>
+                    </div>
+                    <h3>Title</h3>
+                </div>
+            </div>
+            <div class="news-thumbnail">
+                <img id="thumbnail" src="#" alt="thumbnail">
+                <div class="thumbnail-content">
+                    <div class="author">
+                        <p class="author-name">John smash</p>
+                        <p>.5 min</p>
+                    </div>
+                    <h3>Title</h3>
+                </div>
+            </div>
+            
+        </div>
+    </section>
     <footer></footer>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="navFooter.js"></script>
+    <script src="news.js"></script>
 </body>
 </html>
