--- a/services.html
+++ b/services.html
@@ -24,11 +24,13 @@
                 <p class="total" id="client-total">96</p>
                 <p class="caption">Clients</p>
             </div>
+            <line></line>
             <div class="achievement-data">
                 <img src="#" alt="#">
                 <p class="total" id="country-total">22</p>
                 <p class="caption">Countries</p>
             </div>
+            <line></line>
             <div class="achievement-data">
                 <img src="#" alt="#">
                 <p class="total" id="project-total">58</p>
